--- a/THESIS/03-reinforcement.Rmd
+++ b/THESIS/03-reinforcement.Rmd
@@ -41,7 +41,7 @@ knitr::include_graphics('pics/circuloyflechas_v2.png')
 
 ### Goals and Return
 
-The reward signal must guide the agent into achieving a goal. The hint that the sequence of rewards provides is such that if the the agent maximizes the total amount of received rewards, the goal would be reached. Thus the agent objective turns to, not maximizing immediate reward, but instead cumulative reward in the long run. This informal idea is known as the _reward hypothesis_ and it is stated as follows:
+The reward signal must guide the agent into achieving a goal. The hint that the sequence of rewards provides is such that if the agent maximizes the total amount of received rewards, the goal would be reached. Thus the agent objective turns to, not maximizing immediate reward, but instead cumulative reward in the long run. This informal idea is known as the _reward hypothesis_ and it is stated as follows:
 
 > "All of what we mean by goals and purposes can be well thought of as the maximization of the expected value of the cumulative sum of a received scalar signal." [@sutton2018reinforcement]
 
@@ -121,15 +121,15 @@ $$a = \underset{a'}{\text{argmax}}\ q_*(s,a')$$
 
 The _optimal action-value function_ $q_*(s,a)$ also referred as $Q^*(s,a)$ is the maximum expected return achievable by selecting action $a$ and then following an _optimal policy_. The _Bellman equation_ for $Q^*(s,a)$ is:
 $$Q^*(s,a) = \mathds{E}\ \bigg[ r + \gamma\ \underset{a'}{\max}\ Q^*(s',a')\ \bigg|\ S_t=s, A_t=a \bigg]$$
-If $Q^*$ is known the RL problem can be solved, thus estimating $Q^*$ is the basic idea behind many RL algorithms. The _Bellman equation_ can be used as an iterative update: $Q(s,a)_{i+1} \leftarrow \mathds{E}\ [ r + \gamma\ \underset{a'}{\max}\ Q_i(s',a')| s, a ]$, this _value iteration_ technique converges to the _optimal action-value function_ [@sutton2018reinforcement], $Q_i \rightarrow Q^*$ as $i \rightarrow \infty$. In practice _value iteration_ must be truncated at some point, with the conventional practice of stopping after, under a threshold, no significative update change is obtained. For many tasks this approach is unsustainable due to the high dimensionality of states and vast number of state-action pairs.
+If $Q^*$ is known the RL problem can be solved, thus estimating $Q^*$ is the basic idea behind many RL algorithms. The _Bellman equation_ can be used as an iterative update: $Q(s,a)_{i+1} \leftarrow \mathds{E}\ [ r + \gamma\ \underset{a'}{\max}\ Q_i(s',a')| s, a ]$, this _value iteration_ technique converges to the _optimal action-value function_ [@sutton2018reinforcement], $Q_i \rightarrow Q^*$ as $i \rightarrow \infty$. In practice _value iteration_ must be truncated at some point, with the conventional practice of stopping after, under a threshold, no significative update change is obtained. For many tasks this approach is unsustainable due to the high dimensionality of states and the vast number of state-action pairs.
 
 Model-free, value-function approximation RL tries to tackle the intractability of directly estimating $Q(s,a)$ for a high number of state-action pairs with a parameterized version $Q(s,a;\theta) \approx Q^*(s,a)$. In the case of Deep Reinforcement Learning (DRL) $Q$ is approximated by a ANN with parameters $\theta$.
 
-A naive, nonetheless intuitive, approach is to directly translate $Q(s,a): \mathcal{S} \times \mathcal{A} \to \mathds{R}$ to a network architecture that predicts a $Q$-value for each state-action pair. However this approach incurs on $|\mathcal{A}|$ forward computations of the ANN since in order to get the next action following the _greedy policy_, we need to check for all values of the available actions $\forall a \in \mathcal{A}(S_t): Q(s,a;\theta)$. One of the key insights of the Deep Q-Networks (DQN) algorithm [@mnih2013playing][@mnih2015human] was to change to an architecture of the form $Q_{network}: \mathcal{S} \to \mathds{R}^{|\mathcal{A}|}$, predicting all $Q$-values in a single forward pass and also with the extra justification that perhaps the model would learn features about state $s$ that can be reused to predict all $Q$-values for a given $s$. This architecture is know as the $Q_{network}$.
+A naive, nonetheless intuitive, approach is to directly translate $Q(s,a): \mathcal{S} \times \mathcal{A} \to \mathds{R}$ to a network architecture that predicts a $Q$-value for each state-action pair. However this approach incurs on $|\mathcal{A}|$ forward computations of the ANN since in order to get the next action following the _greedy policy_, we need to check for all values of the available actions $\forall a \in \mathcal{A}(S_t): Q(s,a;\theta)$. One of the key insights of the Deep Q-Networks (DQN) algorithm [@mnih2013playing][@mnih2015human] was to change to an architecture of the form $Q_{network}: \mathcal{S} \to \mathds{R}^{|\mathcal{A}|}$, predicting all $Q$-values in a single forward pass and also with the extra justification that perhaps the model would learn features about state $s$ that can be reused to predict all $Q$-values for a given $s$. This architecture is known as the $Q_{network}$.
 
 A $Q_{network}$ capable of predicting the values of the actions would solve the Reinforcement Learning problem (the agent would act greedily over the $Q$-values). Unluckily training a $Q_{network}$ could be tricky as theoretical convergence results are only available for linear approximators [@tsitsiklis1997analysis]. Additionally _Supervised Learning_ techniques assume that the data was generated from the same distribution and its instances are _i.i.d_, both assumptions are violated because the training distribution is constantly changing as the implicit policy defined by the network is changing and the generated observations are highly correlated. To combat the instability that arises DQN uses an _experience replay_ (_memory buffer_) and a _target network_.
 
-For the $Q$-values update through the _Bellman's equation_ a tuple of _state_, _action_, _reward_ and _next reached state_ $(s,a,r,s')$ is required. Interaction with the environment supplies such tuples, however the environment must be explored in such a way that allows for favorable training. A straightforward manner to obtain the observation tuples is by an $\epsilon$-greedy policy, that is, with a small $\epsilon$ a random action is selected, otherwise $a \leftarrow \underset{a'}{\text{argmax}}\ Q(s,a';\theta)$, thus $Q$ generates policy and it is fittingly called the _policy network_. The observation tuples are being stored on the _experience replay_. The _experience replay_ is just a memory with fixed size to save past observations, when the memory is filled, the oldest observation is eliminated to make space for the new incoming observation. The training of $Q$ is done by sampling a minibatch of past observations from the _experience replay_, this with the objective of alleviating the problem of highly correlated observations that are being produced by the policy network.
+For the $Q$-values update through the _Bellman's equation_ a tuple of _state_, _action_, _reward_ and _next reached state_ $(s,a,r,s')$ is required. Interaction with the environment supplies such tuples, however the environment must be explored in such a way that allows for favorable training. A straightforward manner to obtain the observation tuples is by an $\epsilon$-greedy policy, that is, with a small $\epsilon$ a random action is selected, otherwise $a \leftarrow \underset{a'}{\text{argmax}}\ Q(s,a';\theta)$, thus $Q$ generates policy and it is fittingly called the _policy network_. The observation tuples are being stored on the _experience replay_. The _experience replay_ is just a memory with fixed size to save past observations, when the memory is filled, the oldest observation is eliminated to make space for the new incoming observation. The training of $Q$ is done by sampling a minibatch of past observations from the _experience replay_, this to alleviate the problem of highly correlated observations that are being produced by the policy network.
 
 The target network $\hat{Q}_{network}$ is a mere copy of the $Q_{network}$, with the sole purpose of estimating the target update $Q$, for reward $r_i$ and state $s'_i$:
 $$y_i = r_i + \gamma\ \underset{a'}{\max}\ \hat{Q}(s_i',a';\theta)$$
@@ -145,10 +145,10 @@ The complete DQN algorithm can be found at [Apendix 1](#deep-q-networks-dqn-usin
 
 ## The Atari benchmark
 
-The Arcade Learning Environment (ALE) was introduced in 2013 [@bellemare2013arcade]. It was quickly adopted as benchmark by the RL community. ALE consists on a wrapper around the [Stella emulator](https://stella-emu.github.io/) [^1] for the Atari 2600 console. This wrapper provides an interface to more than 50 Atari games. ALE was used by Google's DeepMind team in the DQN paper [@mnih2015human], arguably setting the current trend of deep reinforcement learning. Serving as common benchmark ALE has been successfully used to develop new algorithms that later were applied to other domains, such as robotics [@risi2020chess]. As 2020 a single agent is capable of outperforming standard human play for 57 games Atari games [@badia2020agent57], however the end of the ALE benchmark is nowhere insight as a myriad of challenges still persist on Reinforcement Learning methodologies.
+The Arcade Learning Environment (ALE) was introduced in 2013 [@bellemare2013arcade]. It was quickly adopted as a benchmark by the RL community. ALE consists on a wrapper around the [Stella emulator](https://stella-emu.github.io/) [^1] for the Atari 2600 console. This wrapper provides an interface to more than 50 Atari games. ALE was used by Google's DeepMind team in the DQN paper [@mnih2015human], arguably setting the current trend of deep reinforcement learning. Serving as a common benchmark ALE has been successfully used to develop new algorithms that later were applied to other domains, such as robotics [@risi2020chess]. As 2020 a single agent is capable of outperforming standard human play for 57 games Atari games [@badia2020agent57], however the end of the ALE benchmark is nowhere insight as a myriad of challenges still persist on Reinforcement Learning methodologies.
 
 The desirable characteristics of Atari games for RL evaluation are their variety of tasks, their short episodic nature and scores that can be, almost directly, interpreted as rewards. Also each game was created independently thus reducing the bias that would be introduced by a single party designing all the evaluation tasks. Agents interact with ALE through a set of 18 actions derived from 6 simple actions, namely four directions (up, down, left, right) and fire and NO-OP actions. The final 18 actions are combinations of the basic actions. The state information is raw pixel data with dimensions $210 \times 160$, with each pixel on a 7-bit color scale (0-127). Additionally the whole console RAM of 128 bytes can be used as input to the learning algorithms. ALE can be used as generative model in the sense that previous states, if saved, can be restored.
 
-Some criticism towards ALE are the scarce stochasticity in the environments [@bellemare2015arcade][@machado2018revisiting] and the blackbox emulation of the games. Recent efforts are trying to address those issues, like TOYBOX [@foley2018toybox] which implements from scratch Atari games with added functionality to monitor meaningful representations of game internal states.
+Some criticism towards ALE is the scarce stochasticity in the environments [@bellemare2015arcade][@machado2018revisiting] and the black box emulation of the games. Recent efforts are trying to address those issues, like TOYBOX [@foley2018toybox] which implements from scratch Atari games with added functionality to monitor meaningful representations of game internal states.
 
 [^1]: https://stella-emu.github.io/
