--- a/THESIS/04-results.Rmd
+++ b/THESIS/04-results.Rmd
@@ -81,15 +81,15 @@ df_loss <- read_csv(LOSS_DATA)
 
 ### Environment
 
-A general tool for creating RL tasks was design (_Forest Fire Environment Maker (FFEM)_). The tool generates environments based on the forest fire CA, specifically the Drossel and Schwabl model (DSM) [@drossel1992self]. We developed the tool from an initial idea of an "helicopter" flying over the symbolic wild fire, represented by the DMS, trying to extinguish the fire by means of allowing the "helicopter" to change fire cells to empty cells. During the implementation the environment was naturally generalized. The basic idea is to have an agent on top of the CA lattice. The agent has its own state and parameters. Particularly it has an specified position at one of the nodes of the CA, where it can act by changing the cell on that position to another of its cell states. The agent navigates the CA changing cells states. When the agent reads its next instruction it moves to a new cell (or stays in place) and then affects, if applicable, the destination. After some agent movements the CA is updated and the full process is repeated.
+A general tool for creating RL tasks was design (_Forest Fire Environment Maker (FFEM)_). The tool generates environments based on the forest fire CA, specifically the Drossel and Schwabl model (DSM) [@drossel1992self]. We developed the tool from an initial idea of a "helicopter" flying over the symbolic wildfire, represented by the DMS, trying to extinguish the fire by means of allowing the "helicopter" to change fire cells to empty cells. During the implementation the environment was naturally generalized. The basic idea is to have an agent on top of the CA lattice. The agent has its own state and parameters. Particularly it has an specified position at one of the nodes of the CA, where it can act by changing the cell on that position to another of its cell states. The agent navigates the CA changing cells states. When the agent reads its next instruction it moves to a new cell (or stays in place) and then affects, if applicable, the destination. After some agent movements the CA is updated and the full process is repeated.
 
-The ability of allowing an agent to change the CA configurations express the attempt to drive the CA to a desired global state. In the RL framework this is done by giving a reward to the agent at each emitted action. This was done by mere counting all cell states indicating unwanted behavior and then multiplying by some weight (usually negative). This was generalized into getting the frequency of any cell type and then multiplying by a weight to generate a score per cell type. Then all the scores were combined into a global score. In summary the used reward function was the dot product of the cell-states frequencies by some weights, with the semantics that weights for desirable states are greater than the unwanted ones.
+The ability of allowing an agent to change the CA configurations express the attempt to drive the CA to a desired global state. In the RL framework this is done by giving a reward to the agent at each emitted action. This was done by merely counting all cell states indicating unwanted behavior and then multiplying by some weight (usually negative). This was generalized into getting the frequency of any cell type and then multiplying by a weight to generate a score per cell type. Then all the scores were combined into a global score. In summary the used reward function was the dot product of the cell-states frequencies by some weights, with the semantics that weights for desirable states are greater than the unwanted ones.
 
-The particular environment that was used for this thesis is one that has the semantics of a "helicopter" trying to extinguish a forest fire. This is represented by an agent influencing the dynamics of a DSM and is as follows: The first component is a DSM with a lattice of size 3x3 with parameters $p=0.33$ (tree growth probability) and $f=0.066$ (tree spontaneous burning probability). The used boundary conditions were set to invariant using an extra exogenous cell type that it is not involved in any CA dynamics, we just called them "rocks". The starting lattice configuration was made via random sampling by cell with probability of choosing "tree" of $0.75$ and "fire" of $0.25$. The second component, the agent ("helicopter") has a starting position in the middle of the lattice (_2nd row and column_), from there it can move in any direction of a Moore's neighborhood, thus the agent can choose from $9$ actions (_"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_), then after arriving to its new destination the helicopter extinguishes the fire, represented by changing, if applicable, a "fire" cell to "empty". After some movements of the "helicopter" the forest fire CA is updated following the dynamics dictated by DSM. The specific sequence of agent movements and CA updates is: _move, update, move, move, update, move, move, update, move, move, ..._ (see \@ref(fig:thesis-3-3-env)). In accordance to the RL paradigm, at each performed action the environment must respond with a reward signal, in our setting this was $+1$ per "tree" cell and $-1$ per "fire" cell, in other words a balance between trees and fires. Finally the RL task was continuous.
+The particular environment that was used for this thesis is one that has the semantics of a "helicopter" trying to extinguish a forest fire. This is represented by an agent influencing the dynamics of a DSM and is as follows: The first component is a DSM with a lattice of size 3x3 with parameters $p=0.33$ (tree growth probability) and $f=0.066$ (tree spontaneous burning probability). The used boundary conditions were set to invariant using an extra exogenous cell type that it is not involved in any CA dynamics, we just called them "rocks". The starting lattice configuration was made via random sampling by cell with probability of choosing "tree" of $0.75$ and "fire" of $0.25$. The second component, the agent ("helicopter") has a starting position in the middle of the lattice (_2nd row and column_), from where it can move in any direction of a Moore's neighborhood, thus the agent can choose from $9$ actions (_"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_), then after arriving to its new destination the helicopter extinguishes the fire, represented by changing, if applicable, a "fire" cell to "empty". After some movements of the "helicopter" the forest fire CA is updated following the dynamics dictated by DSM. The specific sequence of agent movements and CA updates is: _move, update, move, move, update, move, move, update, move, move, ..._ (see \@ref(fig:thesis-3-3-env)). In accordance to the RL paradigm, at each performed action the environment must respond with a reward signal, in our setting this was $+1$ per "tree" cell and $-1$ per "fire" cell, in other words a balance between trees and fires. Finally the RL task was continuous.
 
 We selected the parameters of the DMS by seeking a separation between the scales of $f$ and $p$ ($f \ll p$), since a steady state is reached when $\lim \frac {f}{p} \to 0$ [@drossel1992self] and we wanted to see if the agent would significantly alter the dynamics of the CA. In our case $\frac {f}{p}=$ `r 0.066/0.33`. Alongside, empirical tuning was conducted from running the environment with a random policy to select the exact values of $f$ and $p$ that would make the grid relatively active at each step. It is important to note that the steady state only appears on large grids, as smaller ones are subject to finite size effects [@drossel1992self], thus we paid more attention to the empirical second criterion. Nevertheless balancing the two parameters would be important in future grid scaling experiments.
 
-Moreover the FFEM tool adds two new cells types. A "rock" type that does not interact with anything and is used as a barrier to the fire dynamics, it is always constant. A "lake" type that behaves exactly like a "rock" but it marks special positions in the grid that can alter the "helicopter" internal state. For example an idea (yet to be implemented) is to make the "power" of the "helicopter" limited so it would need to use it "wisely" and then would go to a "lake" to recharge it, akin to refilling its tank to keep fighting the wild fire. Also the FFEM tool generalizes the "powers" of the "helicopter" allowing for the exchange of any cell type for another, this lets for the creation of environments with a diversity of semantics like: An environment where the agent has to put barriers or one where it has to strategically deforest to prevent the spread of fire or even one where it has to completely reorganize the CA lattice. Even more functionality was included like a deterministic mode, generalized reward functions and several termination conditions, to check all the FFEM features consult: *https://github.com/elbecerrasoto/gym-forest-fire*.
+Moreover the FFEM tool adds two new cells types. A "rock" type that does not interact with anything and is used as a barrier to the fire dynamics, it is always constant. A "lake" type that behaves exactly like a "rock" but it marks special positions in the grid that can alter the "helicopter" internal state. For example an idea (yet to be implemented) is to make the "power" of the "helicopter" limited so it would need to use it "wisely" and then would go to a "lake" to recharge it, akin to refilling its tank to keep fighting the wildfire. Also the FFEM tool generalizes the "powers" of the "helicopter" allowing for the exchange of any cell type for another, this lets for the creation of environments with a diversity of semantics like: An environment where the agent has to put barriers or one where it has to strategically deforest to prevent the spread of fire or even one where it has to completely reorganize the CA lattice. Even more functionality was included like a deterministic mode, generalized reward functions and several termination conditions, to check all the FFEM features consult: *https://github.com/elbecerrasoto/gym-forest-fire*.
 
 (ref:thesis-3-3-env) Illustration of two transitions in the proposed environment. On time $t$ the helicopter is at 2nd row and column, then it moves to the left, on arriving to its new position it changes the "fire" cell to "empty". Then, at the next time step, it returns to its original position, however the CA was updated before its arrival, anyway the "fire" cell at the middle (not shown) is promptly eliminated and replaced by an "empty" cell. The parameter $m$ is an internal state of the environment, that is decreased by $1$ at each step, when it reaches $0$ the CA is updated at the next step, before the action takes place, and then $m$ is restored to it max value ($m=1$). The current reward $r$ is $+1$ per "tree" and $-1$ per "fire".
 ```{r thesis-3-3-env, fig.cap='(ref:thesis-3-3-env)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
@@ -105,7 +105,7 @@ The source code for this thesis is openly available at:
 
 ### Deep Q Networks
 
-We tried to solve the proposed environment using model-free, value-function approximation RL. This approach is justified by the lack of general analytical models for CA dynamics [@ilachinski2001cellular] and their combinatorial explosion of states. For illustration in our small 3x3 environment the combinatorics are $3^9$ grid states multiplied by $3^2$ "helicopter" positions and $2$ internal states for the agent-environment synchronization, giving a grand total of $2 \times 3^2 \times 3^9 =$ `r 2 * 3^2 * 3^9`, a still manageable quantity by tabular RL standards, however merely scaling to a 16x16 grid leads to an untenable $\approx 10^{124}$ states.
+We tried to solve the proposed environment using model-free, value-function approximation RL. This approach is justified by the lack of general analytical models for CA dynamics [@ilachinski2001cellular] and their combinatorial explosion of states. For illustration in our small 3x3 environment the combinatorics are $3^9$ grid states multiplied by $3^2$ "helicopter" positions and $2$ internal states for the agent-environment synchronization, giving a total of $2 \times 3^2 \times 3^9 =$ `r 2 * 3^2 * 3^9`, a still manageable quantity by tabular RL standards, however merely scaling to a 16x16 grid leads to an untenable $\approx 10^{124}$ states.
 
 Deep Q Networks (DQN) [@mnih2013playing][@mnih2015human] meets the previously stated conditions and is well suited for tasks with a discrete set of actions and when sampling from the environment is low-cost. We implemented DQN with $n$-step unrolling of the Bellman optimality equation for $Q$ values [@sutton1988learning]. The implementation was made in Python 3.x, the _lingua franca_ of AI and RL. The non-linear $Q$ function approximator was an Artificial Neural Network (ANN). We implemented the _experience replay_ memory as a _double-ended queue_ (deque) data structure, which behaves as a list but allows for efficient "appends" and "pops" from either side ($\mathcal{O}(1)$). (see *https://docs.python.org/3.8/library/collections.html?highlight=collections#collections.deque*). Thus for a fixed size of an _experience replay_, incoming observations are appended to one end and old observations are "popped" from the other.
 
@@ -176,7 +176,7 @@ Nine experiments were run using the described environment, between experiments s
 
 Each experiment was run on _[Google Colaboratory](https://colab.research.google.com)_ cloud service using their provided GPUs and computing resources. Their run for 1,200,000 epochs each, divided in 400,000 exploration and 800,000 of exploiting epochs. Two exploration schemes were used, for some models a linear annealing  of $\epsilon$ from $1.0$ to $0.10$ and for others a simple heuristic that moves the helicopter to any fire cell on the neighborhood, choosing randomly when more than one fire cell was present.
 
-The employed optimization algorithm was Adam [@kingma2014adam] with default _[Pytorch](https://pytorch.org/docs/stable/optim.html)_ values, with the exception of _learning rate_ that was set manually per experiment (see Table \@ref(tab:hyper)). Each transition tuple in the _experience replay_ only estimates a single $Q(s,a)$ value, however the output of the $Q_{network}$ is a vector of $Q$ values for all actions, so during optimization steps, for each example in the minibatch, only the weights involved in the calculation of a single $Q(s,a)$ must be taken into account for the weights updating.
+The employed optimization algorithm was Adam [@kingma2014adam] with default _[Pytorch](https://pytorch.org/docs/stable/optim.html)_ values, with the exception of _learning rate_ that was set manually per experiment (see Table \@ref(tab:hyper)). Each transition tuple in the _experience replay_ only estimates a single $Q(s,a)$ value, however the output of the $Q_{network}$ is a vector of $Q$ values for all actions, so during optimization steps, for each example in the minibatch, only the weights involved in the calculation of a single $Q(s,a)$ must be taken into account for the updating of the weights.
 
 ```{r const, message=FALSE}
 caption <- 'Constant DQN hyperparameters values across the 9 experiments.'
@@ -222,7 +222,7 @@ read_csv('data/runs_3x3_v2.csv') %>%
   kable_styling(latex_options = c('striped', 'scale_down'))
 ```
 
-The comparison of the obtained _mean reward per step_ and _reward standard deviation_ is shown in Figure \@ref(fig:sd-mean). It can be observed that the best runs ($c,a,d,i,g$) also have the an smaller _standard deviation_.
+The comparison of the obtained _mean reward per step_ and _reward standard deviation_ is shown in Figure \@ref(fig:sd-mean). It can be observed that the best runs ($c,a,d,i,g$) also have an smaller _standard deviation_.
 
 (ref:sd-mean) The mean and standard deviation for each model was computed from playing the environment 100,000 steps, following greedy policies ($\epsilon=0$).
 ```{r sd-mean, fig.cap='(ref:sd-mean)', fig.align='center'}
@@ -243,7 +243,7 @@ stats_100k %>%
 
 Furthermore a comparison of agents following _$\epsilon$-greedy_ policies is shown in Figure \@ref(fig:sd-mean-epsilon). It could be seen that the performance is close to their respective _greedy_ policies.
 
-(ref:sd-mean-epsilon) Performance of _$\epsilon$-greedy_ policies with $epsilon values$ of $0.02, 0.05$ and  $0.10$.
+(ref:sd-mean-epsilon) Performance of _$\epsilon$-greedy_ policies with $\epsilon$ values of $0.02$, $0.05$ and  $0.10$.
 ```{r sd-mean-epsilon, fig.cap='(ref:sd-mean-epsilon)', fig.align='center'}
 # SD vs Mean reward
 stats_100k %>%
@@ -319,22 +319,22 @@ The appeal of such tasks arises from the properties of CA. Some theoretical and 
 2. They can model complex real world phenomena.
 3. Some CA have _universal computation_ capabilities.
 
-Under the previous justifications, we have shown that is possible to design a CA based Reinforcement Learning task. Additionally the task has real world semantics, namely a Helicopter extinguishing a wild fire. Our particular proposed environment is an agent affecting cells on top of a Drossel and Schwabl forest fire model (DSM) [@drossel1992self]. To further characterize the proposed environment we have applied DQN to try to solve it.
+Under the previous justifications, we have shown that is possible to design a CA based Reinforcement Learning task. Additionally the task has real world semantics, namely a Helicopter extinguishing a wildfire. Our particular proposed environment is an agent affecting cells on top of a Drossel and Schwabl forest fire model (DSM) [@drossel1992self]. To further characterize the proposed environment we have applied DQN to try to solve it.
 
 ### Effect of Hyperameters
 
-The obtained results from the non-exhaustive hyperparameter search can be seen in Table \@ref(tab:hyper). Answering the question of to what degree the hyperparameters affect the end results of each run is not trivial and mostly experimental arguments can be provided. This is because attribution becomes difficult when multiple hyperparameters are changed at the same time since their interactions can be non-linear, yet carefully tuning a single hyperparameter can be inefficient as we would only explore a single dimension of hyperparameter space.
+The obtained results from the non-exhaustive hyperparameter search can be seen in Table \@ref(tab:hyper). Answering the question of to what degree the hyperparameters affect the results of each run is not trivial and mostly experimental arguments can be provided. This is because attribution becomes difficult when multiple hyperparameters are changed at the same time since their interactions can be non-linear, yet carefully tuning a single hyperparameter can be inefficient as we would only explore a single dimension of hyperparameter space.
 
 The experiments $c$, $a$, $d$, $i$ and $g$ have a better performance than the baseline heuristic. The hyperparameter that seems to have the greater effect is _Unrolling_. When it is equal to $1$ the experiments failed to learn (beating the heuristic). _Unrolling_ helps to "accelerate" learning as future steps rewards information is used to estimate the $Q$ values. However in our case this "acceleration" meant the difference between learning something or nothing at all. A comparison between experiments $c$, $h$, and $f$ is interesting as they have similar hyperparameters values but $h$ and $f$ failed to learn and arguably the difference can be attributed to the _Unrolling_ hyperparameter.
 
 The tried _learning rate_ values were $0.0001$, $0.0003$, both of them worked. A small _minibatch size_ ($16$ and $32$) and a $\gamma$ of $0.99$ also worked.
 
-One of the approaches to make the task easier was to allow some agents to train following a heuristic policy during exploration. Even though the best performing run used the heuristic exploration, other agents were capable of learning by a simple $\epsilon$ linear decrease from $1.0$ to $0.10$ during the fisrt 400,000 iterations. Thus learning is achievable without the heuristic and in future experiments within the same environment it could be discarded as it can bias learning. The impact of exploring with the heuristic can be seen in the training dynamics plot (Figure \@ref(fig:reward-dynamics)) where the agents using the heuristic start the training with a much better performance, but after exploration is finished some manage to learn from the heuristic ($c$, $d$) and others not and its performance plummets ($f$, $e$). A similar behaviour can be observed in the epochs vs loss plot (Figure \@ref(fig:loss)), where, for the heuristic runs, the error started low and it was kept in that way during the exploration phase, since the linear exploration policy is steadely changing as opossed to the heuristic. Then when exploration finished and the $0.10$-greedy policy took effect, some runs had learned and its error was maintained and others had not and its errors blew up.
+One of the approaches to make the task easier was to allow some agents to train following a heuristic policy during exploration. Even though the best performing run used the heuristic exploration, other agents were capable of learning by a simple $\epsilon$ linear decrease from $1.0$ to $0.10$ during the fisrt 400,000 iterations. Thus learning is achievable without the heuristic and in future experiments within the same environment it could be discarded as it can bias learning. The impact of exploring with the heuristic can be seen in the training dynamics plot (Figure \@ref(fig:reward-dynamics)) where the agents using the heuristic start the training with  much better performance, but after exploration is finished some manage to learn from the heuristic ($c$, $d$) and others not and its performance plummets ($f$, $e$). Similar behaviour can be observed in the epochs vs loss plot (Figure \@ref(fig:loss)), where, for the heuristic runs, the error started low and it was kept in that way during the exploration phase, since the linear exploration policy is steadily changing as opossed to the heuristic. Then when exploration finished and the $0.10$-greedy policy took effect, some runs had learned and its error was maintained and others had not and its errors blew up.
 
-The choosen ANN architectures are in increasing order of complexity: A2, A1 and A3 (see Figures \@ref(fig:A2), \@ref(fig:A1) and \@ref(fig:A3)). The best run employed the more complex network (A3). The number A3 has a number of parameters in the same order of magnitude as the environment states (`r parameters_in_MLP(A3)` parameters vs. `r 2 * 3^2 * 3^9` states), so it is expected to be considerably overfitting. The number of parameters of the next performing network (`r parameters_in_MLP(A2)` parameters) is of an order below, but still it is expected to be overfitting.
+The chosen ANN architectures are in increasing order of complexity: A2, A1 and A3 (see Figures \@ref(fig:A2), \@ref(fig:A1) and \@ref(fig:A3)). The best run employed the more complex network (A3). The number A3 has several of parameters in the same order of magnitude as the environment states (`r parameters_in_MLP(A3)` parameters vs. `r 2 * 3^2 * 3^9` states), so it is expected to be considerably overfitting. The number of parameters of the next performing network (`r parameters_in_MLP(A2)` parameters) is of an order below, but still it is expected to be overfitting.
 
 Training for more iterations presumably would not increase significantly the performance of any experiment as it could be seen from the training dynamics plot (see Figure  \@ref(fig:reward-dynamics)).
 
-From the evaluation data it can be observed that the best performing runs have a lower _standard deviation_ to those that failed to learn (Figure \@ref(fig:sd-mean)), thus the better runs not only played better but they consistentily did it. Likewise, from the same data, three overall regions, in terms of _mean reward_ and _standard deviation_, can be seen. The first one groups the best runs together. The second groups the worst runs. The third one contains the Heuristic and the $g$ run. From the third region is interesting to notice that even so agent $g$ plays better than the heuristic it does it with a higher _standard deviation_, presumably because it performs really well in some enviroment states but badly in others, besides $g$ used an _Unrolling_ of $10$ which could explain that some estimations of $Q$ values were biased with such large _Unrolling_.
+From the evaluation data it can be observed that the best performing runs have a lower _standard deviation_ to those that failed to learn (Figure \@ref(fig:sd-mean)), thus the better runs not only played better but they consistently did it. Likewise, from the same data, three overall regions, in terms of _mean reward_ and _standard deviation_, can be seen. The first one groups the best runs together. The second groups the worst runs. The third one contains the Heuristic and the $g$ run. From the third region is interesting to notice that even so agent $g$ plays better than the heuristic it does it with a higher _standard deviation_, presumably because it performs really well in some environment states but badly in others, besides $g$ used an _Unrolling_ of $10$ which could explain that some estimations of $Q$ values were biased with such large _Unrolling_.
 
 To test for the robustness and maximization bias of the learned policies, the agents were also evaluated with $\epsilon$-greedy policies of $0.02$, $0.05$ and $0.10$. We did not find anything unexpedted, since the performance of better than the heuristic agents deteriorated (Figure \@ref(fig:sd-mean-epsilon)).
